[package]
name = "jrny"
authors = ["Kevin Larrabee <6306496+kevlarr@users.noreply.github.com>"]
categories = ["command-line-utilities"]
description = "Simple SQL-based PostgreSQL schema revisions"
edition = "2018"
keywords = ["sql", "postgres", "schema", "migration", "revision"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kevlarr/jrny"
version = "1.2.0"

[dependencies]
clap = "2.33"
chrono = "0.4"
log = "0.4"
postgres = { version = "0.18", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
termcolor = "1.1"
toml = "0.5"
