[package]
name = "jrny"
version = "1.3.0"
edition = "2018"

authors = ["Kevin Larrabee <6306496+kevlarr@users.noreply.github.com>"]
description = "Simple SQL-based PostgreSQL schema revisions"
repository = "https://github.com/kevlarr/jrny"
categories = ["command-line-utilities"]
keywords = ["sql", "postgres", "schema", "migration", "revision"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33"
chrono = "0.4"
log = "0.4"
postgres = { version = "0.18", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
termcolor = "1.1"
toml = "0.5"
