[package]
name = "jrny"
version = "2.0.0-beta.5"
edition = "2021"

authors = ["Kevin Larrabee <6306496+kevlarr@users.noreply.github.com>"]
description = "Simple SQL-based PostgreSQL schema revisions"
repository = "https://github.com/kevlarr/jrny"
categories = ["command-line-utilities"]
keywords = ["sql", "postgres", "schema", "migration", "revision"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4.19"
log = "0.4.14"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
serde = { version = "1.0.130", features = ["derive"] }
sha2 = "0.9.8"
termcolor = "1.1.2"
toml = "0.5.8"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "cargo", "derive", "suggestions"]
